# -compliance-obligations-tracker

./: .gitignore  DECISIONS.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_widen_company_tax_id.py  0003_encrypt_company_tax_id_data.py
backend/app/: config.py  crypto.py  main.py
backend/app/db/: models.py
backend/app/domain/: obligation.py
backend/app/repositories/: audit_repo.py  obligation_repo.py
backend/app/routes/: obligations.py
backend/app/schemas/: obligation.py
backend/app/services/: obligation_service.py
backend/scripts/: gen_mock_images.py  populate_db.py
backend/tests/: test_crypto.py  test_domain.py  test_routes.py  test_service.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/actions/: createObligation.ts  transitionObligation.ts  updateObligation.ts  uploadDocument.ts
frontend/app/: layout.tsx
frontend/app/[locale]/: layout.tsx  page.tsx
frontend/components/layout/: LocaleSwitcher.tsx  Sidebar.tsx  Topbar.tsx
frontend/components/obligations/: AuditTrail.tsx  DocumentUpload.tsx  ObligationCard.tsx  ObligationEditForm.tsx  ObligationForm.tsx  ObligationsFilters.tsx  ObligationsKPIs.tsx  ObligationsList.tsx  ObligationsPagination.tsx  StatusCycleCard.tsx  StatusFilter.tsx  TransitionButtons.tsx
frontend/i18n/: request.ts
frontend/lib/: api.ts  format.ts  types.ts
frontend/messages/: en.json  es.json
(+8 files in other folders)
